incident type analysis

--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,10 @@ html {
 #visContainer2 {
   width: 520px;
   height: 400px;
-  border: 1px solid gray;
+  /* border: 1px solid gray; */
 }
 #visContainer3 {
   width: 520px;
   height: 400px;
-  border: 1px solid gray;
+  /* border: 1px solid gray; */
 }
