--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 html {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
-    Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: Verdana, sans-serif;
   font-size: 16px;
 }
 
@@ -14,7 +13,7 @@ html {
   width: 520px;
   height: 480px;
   float: left;
-  margin-right: 60px;
+  margin-right: 10px;
 }
 
 .plot2 {
@@ -23,13 +22,13 @@ html {
   float: left;
 }
 
-#visContainer2 {
-  width: 520px;
-  height: 400px;
-  /* border: 1px solid gray; */
+#number {
+  margin: 0;
+  padding-top: 10px;
+  padding-left: 220px;
+  font-size: 0.9em;
 }
-#visContainer3 {
-  width: 520px;
-  height: 400px;
-  /* border: 1px solid gray; */
+
+button {
+  margin: 2px;
 }
